Fix horizontal scroll bar

--- a/static/code.css
+++ b/static/code.css
@@ -1,6 +1,6 @@
 .highlight .nana { background-color: #DBDBCC; }
 .highlight .hll { background-color: #ffffcc; }
-.highlight  { background: #f8f8f8; font-size: 15px;}
+.highlight  { display: block; overflow: auto; background: #f8f8f8; font-size: 15px;}
 .highlight .c { color: #408080; font-style: italic } /* Comment */
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
